--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -336,20 +336,27 @@
         @media screen and (max-width: 768px) {
             .container {
                 flex-direction: column;
+                margin: 0;
+                padding: 0;
             }
 
             .sidebar {
-                width: 100%;
-                position: relative;
+                display: none;
             }
 
             .main-content {
                 width: 100%;
-                padding: 1rem 0.5rem;
+                padding: 0;
+                margin: 0;
+            }
+
+            .header {
+                margin: 0;
+                padding: 0.5rem;
             }
 
             .card {
-                margin: 0.5rem 0;
+                margin: 0;
                 border-radius: 0;
             }
 
@@ -376,9 +383,7 @@
             }
 
             .logo {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
+                display: none;
             }
 
             /* Ajustes para los filtros en móvil */
