Ajustes responsive generales y botón de menú desplegable

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div class="container">
+        <!-- Botón de menú hamburguesa para móvil -->
+        <button class="menu-toggle" id="menuToggle">
+            <span class="menu-icon"></span>
+        </button>
         <!-- Menú lateral -->
         <div class="sidebar">
             <div class="logo">FotoStudio</div>
-            <button class="menu-toggle" id="menuToggle">
-                <span class="menu-icon"></span>
-            </button>
             <nav class="nav-menu">
                 <ul>
                     <li class="nav-item">
