--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -136,6 +136,10 @@
 </head>
 <body>
     <div class="container">
+        <!-- Botón de menú hamburguesa para móvil -->
+        <button class="menu-toggle" id="menuToggle">
+            <span class="menu-icon"></span>
+        </button>
         <!-- Menú lateral -->
         <div class="sidebar">
             <div class="logo">FotoStudio</div>
@@ -360,5 +364,23 @@
             border-top: 1px solid rgba(0, 0, 0, 0.1);
         }
     </style>
+
+    <script>
+        // Control del menú móvil
+        const menuToggle = document.getElementById('menuToggle');
+        const sidebar = document.querySelector('.sidebar');
+        menuToggle.addEventListener('click', () => {
+            sidebar.classList.toggle('active');
+            menuToggle.classList.toggle('menu-active');
+        });
+
+        // Cerrar menú al hacer clic fuera (solo móvil)
+        document.addEventListener('click', (e) => {
+            if (window.innerWidth <= 768 && !sidebar.contains(e.target) && !menuToggle.contains(e.target) && sidebar.classList.contains('active')) {
+                sidebar.classList.remove('active');
+                menuToggle.classList.remove('menu-active');
+            }
+        });
+    </script>
 </body>
 </html> 
