--- a/pages/inventario.html
+++ b/pages/inventario.html
@@ -6,98 +6,197 @@
     <title>Gestión de Inventario - Sistema de Gestión Fotográfica</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
     <style>
-        /* Estilos para escritorio */
+        html, body {
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+        }
+
+        .menu-header {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0;
+            background: white;
+            height: 60px;
+            z-index: 1000;
+            display: none;
+        }
+
+        .menu-button {
+            display: none;
+            width: 35px;
+            height: 35px;
+            background: #3B5998;
+            border: none;
+            padding: 7px;
+            cursor: pointer;
+            position: absolute;
+            top: 15px;
+            left: 15px;
+        }
+
+        .menu-button span {
+            display: block;
+            width: 20px;
+            height: 2px;
+            background: white;
+            margin: 3px auto;
+        }
+
         .container {
             display: flex;
             width: 100%;
             min-height: 100vh;
+            position: relative;
         }
 
         .sidebar {
             width: 250px;
-            background-color: #333;
+            background: #333;
             color: white;
-            position: fixed;
             height: 100vh;
+            position: fixed;
             overflow-y: auto;
         }
 
         .main-content {
             margin-left: 250px;
             flex: 1;
-            padding: 2rem;
+            padding: 20px;
+            background: white;
+            position: relative;
         }
 
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 2rem;
-        }
-
-        /* Estilos específicos para móvil */
         @media screen and (max-width: 768px) {
-            .container {
+            .menu-button {
                 display: block;
             }
 
             .sidebar {
-                display: none;
+                transform: translateX(-100%);
+                transition: transform 0.3s ease;
+                z-index: 999;
+            }
+
+            .sidebar.active {
+                transform: translateX(0);
             }
 
             .main-content {
                 margin-left: 0;
-                width: 100%;
-                padding: 1rem;
+                padding: 15px;
             }
 
             .header {
-                flex-direction: column;
-                gap: 1rem;
+                padding-left: 60px;
             }
 
-            .header div {
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                gap: 0.5rem;
+            .header h1 {
+                font-size: 1.4rem;
             }
 
-            .header button {
-                width: 100%;
+            .header-buttons {
+                padding-left: 45px;
             }
 
-            .form-row {
-                flex-direction: column;
+            .header-buttons button {
+                margin: 0;
+            }
+        }
+
+        @media screen and (min-width: 769px) {
+            .menu-button {
+                display: none !important;
             }
 
-            .form-col {
-                width: 100%;
+            .header-buttons {
+                flex-direction: row;
+                justify-content: flex-end;
             }
 
-            .table-container {
-                overflow-x: auto;
+            .header-buttons button {
+                width: auto;
             }
+        }
 
-            .modal {
-                width: 95%;
-                max-height: 90vh;
-                overflow-y: auto;
+        .header {
+            margin-bottom: 2rem;
+            padding: 15px;
+        }
+
+        .header h1 {
+            margin: 0;
+            font-size: 1.5rem;
+        }
+
+        .header-buttons {
+            margin-top: 1rem;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .header-buttons button {
+            width: 100%;
+            max-width: 300px;
+        }
+
+        .menu-toggle:hover {
+            background: #344e86;
+        }
+
+        .header-title {
+            margin: 0;
+            padding: 1rem;
+        }
+
+        .close-menu {
+            display: none;
+            position: fixed;
+            top: 1rem;
+            left: 1rem;
+            z-index: 1100;
+            background: var(--primary);
+            border: none;
+            width: 40px;
+            height: 40px;
+            border-radius: 4px;
+            cursor: pointer;
+            color: var(--white);
+            font-size: 1.7rem;
+            align-items: center;
+            justify-content: center;
+            transition: background 0.3s;
+        }
+        .close-menu:hover {
+            background: var(--primary-dark);
+        }
+        @media (max-width: 768px) {
+            .close-menu {
+                display: block;
             }
-
-            .modal-footer {
-                flex-direction: column;
-                gap: 0.5rem;
+            .sidebar:not(.active) ~ .close-menu {
+                display: none !important;
             }
-
-            .modal-footer button {
-                width: 100%;
+            .sidebar.active ~ .menu-toggle {
+                display: none !important;
+            }
+        }
+        @media (min-width: 769px) {
+            .close-menu {
+                display: none !important;
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <!-- Botón de menú hamburguesa para móvil -->
+        <button class="menu-toggle" id="menuToggle">
+            <span class="menu-icon"></span>
+        </button>
+        <!-- Botón de cerrar menú para móvil -->
+        <button class="close-menu" id="closeMenu" style="display:none;">&times;</button>
         <!-- Menú lateral -->
         <div class="sidebar">
             <div class="logo">FotoStudio</div>
@@ -140,7 +239,7 @@
         <div class="main-content">
             <div class="header">
                 <h1>Gestión de Inventario</h1>
-                <div>
+                <div class="header-buttons">
                     <button class="btn btn-secondary" id="btnMovimiento">Registrar Movimiento</button>
                     <button class="btn btn-primary" id="btnNuevoProducto">Nuevo Producto</button>
                 </div>
@@ -415,19 +514,45 @@
     </div>
 
     <script>
-        document.getElementById('menuToggle').addEventListener('click', function() {
-            this.classList.toggle('active');
-            document.querySelector('.sidebar').classList.toggle('active');
+        // Variables para el control del scroll
+        let lastScrollTop = 0;
+        const menuHeader = document.querySelector('.menu-header');
+
+        // Función para manejar el scroll
+        window.addEventListener('scroll', function() {
+            let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+            
+            if (scrollTop > lastScrollTop) {
+                // Scroll hacia abajo
+                menuHeader.classList.add('hide');
+            } else {
+                // Scroll hacia arriba
+                menuHeader.classList.remove('hide');
+            }
+            
+            lastScrollTop = scrollTop;
         });
 
-        // Cerrar menú al hacer clic fuera de él
-        document.addEventListener('click', function(e) {
-            const sidebar = document.querySelector('.sidebar');
-            const menuToggle = document.getElementById('menuToggle');
-            if (!sidebar.contains(e.target) && !menuToggle.contains(e.target) && sidebar.classList.contains('active')) {
-                sidebar.classList.remove('active');
-                menuToggle.classList.remove('active');
+        // Control del menú móvil SOLO con el botón hamburguesa y la X
+        const menuToggle = document.getElementById('menuToggle');
+        const closeMenu = document.getElementById('closeMenu');
+        const sidebar = document.querySelector('.sidebar');
+        menuToggle.addEventListener('click', () => {
+            sidebar.classList.toggle('active');
+            menuToggle.classList.toggle('menu-active');
+            if (sidebar.classList.contains('active')) {
+                closeMenu.style.display = 'block';
+                menuToggle.style.display = 'none';
+            } else {
+                closeMenu.style.display = 'none';
+                menuToggle.style.display = 'block';
             }
+        });
+        closeMenu.addEventListener('click', function() {
+            sidebar.classList.remove('active');
+            menuToggle.classList.remove('menu-active');
+            closeMenu.style.display = 'none';
+            menuToggle.style.display = 'block';
         });
     </script>
 
