--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <div class="container">
+        <!-- Botón de menú hamburguesa para móvil (igual que en index.html) -->
+        <button class="menu-toggle" id="menuToggle">
+            <span class="menu-icon"></span>
+        </button>
         <!-- Menú lateral -->
-        <div class="sidebar">
+        <div class="sidebar" id="sidebar">
             <div class="logo">FotoStudio</div>
             <nav class="nav-menu">
                 <ul>
@@ -46,10 +50,9 @@
                 </ul>
             </nav>
         </div>
-
         <!-- Contenido principal -->
         <div class="main-content">
-            <div class="header">
+            <div class="header sticky-header">
                 <h1>Gestión de Pedidos</h1>
                 <button class="btn btn-primary" id="btnNuevoPedido">Nuevo Pedido</button>
             </div>
@@ -324,123 +327,154 @@
             background: #333;
             color: white;
             padding: 1rem;
+            height: 100vh;
+            position: fixed;
+            left: 0;
+            top: 0;
+            z-index: 1000;
+            transition: transform 0.3s ease;
         }
 
         .main-content {
             flex: 1;
             padding: 1rem;
+            margin-left: 250px;
             overflow-x: hidden;
+        }
+
+        .sticky-header {
+            position: sticky;
+            top: 0;
+            background: white;
+            z-index: 100;
+            padding: 1rem;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .menu-toggle {
+            display: none;
+            background: #4267B2;
+            border: none;
+            cursor: pointer;
+            width: 40px;
+            height: 40px;
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            z-index: 2000;
+            border-radius: 3px;
+            padding: 8px;
+        }
+
+        .menu-toggle span {
+            display: block;
+            width: 24px;
+            height: 2px;
+            background: white;
+            margin: 4px 0;
+            transition: all 0.3s ease;
+        }
+
+        .menu-toggle.active {
+            background: transparent;
+            position: fixed;
+        }
+
+        .menu-toggle.active span {
+            background: #333;
+        }
+
+        .menu-toggle.active span:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+
+        .menu-toggle.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .menu-toggle.active span:nth-child(3) {
+            transform: rotate(-45deg) translate(7px, -6px);
+        }
+
+        .close-menu {
+            display: none;  /* Oculto por defecto en escritorio */
         }
 
         /* Estilos responsive mejorados */
         @media screen and (max-width: 768px) {
             .container {
                 flex-direction: column;
-                margin: 0;
-                padding: 0;
             }
 
+            .menu-toggle {
+                display: block;
+                position: fixed;
+                top: 10px;
+                left: 10px;
+                z-index: 2200;
+                background: #4267B2;
+                border: none;
+                cursor: pointer;
+                width: 40px;
+                height: 40px;
+                border-radius: 3px;
+                padding: 8px;
+            }
             .sidebar {
+                position: relative;
+                width: 100vw;
+                max-width: 100vw;
+                height: auto;
+                min-height: unset;
+                transform: none;
+                transition: none;
                 display: none;
+                border-radius: 0 0 10px 10px;
+                box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+                padding-bottom: 1rem;
+                margin-bottom: 1rem;
             }
-
-            .main-content {
-                width: 100%;
-                padding: 0;
-                margin: 0;
-            }
-
-            .header {
-                margin: 0;
-                padding: 0.5rem;
-            }
-
-            .card {
-                margin: 0;
-                border-radius: 0;
-            }
-
-            .table-container {
-                margin: 0 -0.5rem;
-                width: calc(100% + 1rem);
-            }
-
-            .form-row {
-                margin: 0;
-            }
-
-            .form-col {
-                padding: 0 0.5rem;
-            }
-
-            /* Ajustes para el menú en móvil */
-            .nav-menu {
-                display: none;
-            }
-
-            .nav-menu.active {
+            .sidebar.active {
                 display: block;
             }
-
-            .logo {
-                display: none;
-            }
-
-            /* Ajustes para los filtros en móvil */
-            .card.mb-3 {
-                margin-bottom: 0.5rem !important;
-            }
-
-            .form-control {
-                width: 100%;
-                margin-bottom: 0.5rem;
-            }
-
-            /* Ajustes para la tabla */
-            .table {
-                font-size: 0.875rem;
-            }
-
-            .table th,
-            .table td {
-                padding: 0.5rem;
-            }
-
-            /* Ajustes para los modales */
-            .modal {
-                width: 95%;
-                margin: 2.5% auto;
-                max-height: 90vh;
-                overflow-y: auto;
-            }
-
-            .modal-body {
-                padding: 1rem;
-            }
-
-            /* Mejoras en la visualización de botones */
-            .actions {
-                display: flex;
-                gap: 0.25rem;
-            }
-
-            .btn-sm {
-                padding: 0.25rem 0.5rem;
-                font-size: 0.875rem;
-            }
-
-            /* Indicador de scroll */
-            .scroll-indicator {
-                position: fixed;
-                bottom: 1rem;
-                left: 50%;
-                transform: translateX(-50%);
-                background: rgba(0,0,0,0.8);
+            .close-menu {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                background: transparent;
+                border: none;
                 color: white;
-                padding: 0.5rem 1rem;
-                border-radius: 20px;
-                font-size: 0.875rem;
-                z-index: 1000;
+                font-size: 24px;
+                cursor: pointer;
+                display: block;
+                z-index: 2100;
+            }
+            .nav-menu ul {
+                display: flex;
+                flex-direction: column;
+                gap: 0.5rem;
+                margin: 0;
+                padding: 0;
+            }
+            .main-content {
+                margin-left: 0 !important;
+                padding-top: 60px;
+            }
+            .sticky-header {
+                padding-left: 60px;
+            }
+            .logo {
+                text-align: center;
+                margin-bottom: 1rem;
+            }
+        }
+
+        @media (min-width: 769px) {
+            .menu-toggle {
+                display: none !important;
             }
         }
 
@@ -461,29 +495,10 @@
 
     <!-- Botón para mostrar/ocultar menú en móvil -->
     <script>
-        // Función para toggle del menú en móvil
-        function toggleMenu() {
-            const menu = document.querySelector('.nav-menu');
-            menu.classList.toggle('active');
-        }
-
-        // Ajustar contenido al cargar y al cambiar el tamaño de la ventana
-        function adjustContent() {
-            const isMobile = window.innerWidth <= 768;
-            const sidebar = document.querySelector('.sidebar');
-            const mainContent = document.querySelector('.main-content');
-
-            if (isMobile) {
-                mainContent.style.marginLeft = '0';
-                sidebar.style.position = 'relative';
-            } else {
-                mainContent.style.marginLeft = '250px';
-                sidebar.style.position = 'fixed';
-            }
-        }
-
-        window.addEventListener('load', adjustContent);
-        window.addEventListener('resize', adjustContent);
+        document.getElementById('menuToggle').addEventListener('click', function() {
+            document.querySelector('.sidebar').classList.toggle('active');
+            this.classList.toggle('menu-active');
+        });
     </script>
 </body>
 </html> 
