Ajuestes responsive en colegio

--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -12,7 +12,12 @@
             overflow-x: auto;
             -webkit-overflow-scrolling: touch;
         }
-
+        .table .actions {
+         display: flex;
+         gap: var(--spacing-sm);
+         justify-content: flex-end;
+         margin-right: 60%;
+        }
         /* Estilos responsivos */
         @media screen and (max-width: 768px) {
             .container {
