--- a/pages/index.html
+++ b/pages/index.html
@@ -70,17 +70,17 @@
                 <div class="card status-card in-progress">
                     <h3>Producción</h3>
                     <div class="number">8</div>
-                    <a href="pedidos.html" class="btn btn-sm btn-primary">Ver detalles</a>
+                    <a href="pedidos.html" class="btn btn-sm-btn-primary">Ver detalles</a>
                 </div>
                 <div class="card status-card completed">
                     <h3>Entregados</h3>
                     <div class="number">25</div>
-                    <a href="pedidos.html" class="btn btn-sm btn-primary">Ver detalles</a>
+                    <a href="pedidos.html" class="btn btn-sm-btn-primary">Ver detalles</a>
                 </div>
                 <div class="card status-card alert">
                     <h3>Stock Bajo</h3>
                     <div class="number">3</div>
-                    <a href="inventario.html" class="btn btn-sm btn-primary">Ver detalles</a>
+                    <a href="inventario.html" class="btn btn-sm-btn-primary">Ver detalles</a>
                 </div>
             </div>
 
@@ -104,7 +104,7 @@
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title">Pedidos Recientes</h2>
-                    <a href="pedidos.html" class="btn btn-sm btn-primary">Ver todos</a>
+                    <a href="pedidos.html" class="btn btn-sm-btn-primary">Ver todos</a>
                 </div>
                 <div class="table-container">
                     <table class="table">
@@ -124,7 +124,7 @@
                                 <td><span class="badge badge-info">Nuevo</span></td>
                                 <td>15/04/2023</td>
                                 <td class="actions">
-                                    <a href="#" class="btn btn-sm btn-primary">Ver</a>
+                                    <a href="#" class="btn btn-sm-btn-primary">Ver</a>
                                 </td>
                             </tr>
                             <tr>
@@ -133,7 +133,7 @@
                                 <td><span class="badge badge-warning">Producción</span></td>
                                 <td>12/04/2023</td>
                                 <td class="actions">
-                                    <a href="#" class="btn btn-sm btn-primary">Ver</a>
+                                    <a href="#" class="btn btn-sm-btn-primary">Ver</a>
                                 </td>
                             </tr>
                             <tr>
@@ -142,7 +142,7 @@
                                 <td><span class="badge badge-warning">Producción</span></td>
                                 <td>10/04/2023</td>
                                 <td class="actions">
-                                    <a href="#" class="btn btn-sm btn-primary">Ver</a>
+                                    <a href="#" class="btn btn-sm-btn-primary">Ver</a>
                                 </td>
                             </tr>
                             <tr>
@@ -151,7 +151,7 @@
                                 <td><span class="badge badge-success">Entregado</span></td>
                                 <td>08/04/2023</td>
                                 <td class="actions">
-                                    <a href="#" class="btn btn-sm btn-primary">Ver</a>
+                                    <a href="#" class="btn btn-sm-btn-primary">Ver</a>
                                 </td>
                             </tr>
                         </tbody>
