--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -321,7 +321,12 @@
             width: 100%;
             min-height: 100vh;
         }
-
+        .table .actions {
+         display: flex;
+         gap: var(--spacing-sm);
+         justify-content: flex-end;
+         margin-right: 30%;
+        }
         .sidebar {
             width: 250px;
             background: #333;
