Integración de repositorio

--- a/pages/clientes.html
+++ b/pages/clientes.html
@@ -40,8 +40,8 @@
                     <li class="nav-item">
                         <a href="agenda.html" class="nav-link">Agenda</a>
                     </li>
-                    <li class="nav-item coming-soon">
-                        <span class="nav-link">Reportes <small>(Próximamente)</small></span>
+                    <li class="nav-item">
+                        <a href="reportes.html" class="nav-link">Reportes</a>
                     </li>
                     <li class="nav-item coming-soon">
                         <span class="nav-link">Configuración <small>(Próximamente)</small></span>
