--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -34,9 +34,9 @@
                     <li class="nav-item ">
                         <a href="agenda.html" class="nav-link">Agenda</a>
                     </li>
-                    <li class="nav-item coming-soon">
-                        <span class="nav-link">Reportes <small>(Próximamente)</small></span>
-                    </li>
+                    <li class="nav-item">
+                      <a href="reportes.html" class="nav-link">Reportes</a>
+                  </li>
                     <li class="nav-item coming-soon">
                         <span class="nav-link">Configuración <small>(Próximamente)</small></span>
                     </li>
