Corrijo menú lateral para que Configuración sea funcional en todas las páginas

--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -54,8 +54,8 @@
                     <li class="nav-item">
                         <a href="reportes.html" class="nav-link">Reportes</a>
                     </li>
-                    <li class="nav-item coming-soon">
-                        <span class="nav-link">Configuración <small>(Próximamente)</small></span>
+                    <li class="nav-item">
+                        <a href="configuracion.html" class="nav-link">Configuración</a>
                     </li>
                     <li class="nav-item">
                         <a href="login.html" class="nav-link">Cerrar Sesión</a>
