cambios responsive parte1

--- a/pages/index.html
+++ b/pages/index.html
@@ -70,17 +70,17 @@
                 <div class="card status-card in-progress">
                     <h3>Producción</h3>
                     <div class="number">8</div>
-                    <a href="pedidos.html" class="btn btn-sm-btn-primary">Ver detalles</a>
+                    <a href="pedidos.html" class="btn btn-sm btn-primary">Ver detalles</a>
                 </div>
                 <div class="card status-card completed">
                     <h3>Entregados</h3>
                     <div class="number">25</div>
-                    <a href="pedidos.html" class="btn btn-sm-btn-primary">Ver detalles</a>
+                    <a href="pedidos.html" class="btn btn-sm btn-primary">Ver detalles</a>
                 </div>
                 <div class="card status-card alert">
                     <h3>Stock Bajo</h3>
                     <div class="number">3</div>
-                    <a href="inventario.html" class="btn btn-sm-btn-primary">Ver detalles</a>
+                    <a href="inventario.html" class="btn btn-sm btn-primary">Ver detalles</a>
                 </div>
             </div>
 
