--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -9,7 +9,12 @@
   
 </head>
 <body>
-<div class="sidebar" id="sidebar">
+    <div class="container">
+    <!-- Botón de menú hamburguesa para móvil -->
+        <button class="menu-toggle" id="menuToggle">
+           <span class="menu-icon"></span>
+        </button>
+        <div class="sidebar" id="sidebar">
             <div class="logo">FotoStudio</div>
             <nav class="nav-menu">
                 <ul>
@@ -48,7 +53,9 @@
         </div>
 
     <div class="main-content">
+      <div class="header">
       <h1>Agenda Fotográfica</h1>
+      </div>
 
       <div class="card">
         <h2>Filtros</h2>
@@ -107,8 +114,8 @@
                 <td>2025-05-01</td>
                 <td>Confirmada</td>
                 <td>
-                  <button class="btn btn-sm btn-primary">Ver</button>
-                  <button class="btn btn-sm btn-secondary">Editar</button>
+                  <button class="btn btn-sm btn-ver">Ver</button>
+                  <button class="btn btn-sm btn-editar">Editar</button>
                 </td>
               </tr>
               <tr>
@@ -117,8 +124,8 @@
                 <td>2025-05-02</td>
                 <td>Pendiente</td>
                 <td>
-                  <button class="btn btn-sm btn-primary">Ver</button>
-                  <button class="btn btn-sm btn-secondary">Editar</button>
+                  <button class="btn btn-sm btn-ver">Ver</button>
+                  <button class="btn btn-sm btn-editar">Editar</button>
                 </td>
               </tr>
             </tbody>
@@ -142,5 +149,23 @@
       });
     });
   </script>
+  <script>
+    // Control del menú móvil
+    const menuToggle = document.getElementById('menuToggle');
+    const sidebar = document.getElementById('sidebar');
+    
+    menuToggle.addEventListener('click', () => {
+        sidebar.classList.toggle('active');
+        menuToggle.classList.toggle('menu-active');
+    });
+
+    // Cerrar menú al hacer clic fuera
+    document.addEventListener('click', (e) => {
+        if (!sidebar.contains(e.target) && !menuToggle.contains(e.target) && sidebar.classList.contains('active')) {
+            sidebar.classList.remove('active');
+            menuToggle.classList.remove('menu-active');
+        }
+    });
+</script>
 </body>
 </html>
